# SpaceRunner

./: .gitignore  Dockerfile  Procfile  README.md  catalog-info.yaml  manage.py  mkdocs.yml  pyproject.toml  requirements.txt  tailwind.config.js  uwsgi.ini
.github/workflows/: container_build.yml  django_checks.yml
accounts/: admin.py  forms.py  models.py  views.py
accounts/migrations/: 0001_initial.py  0002_customuser_first_visit_alter_customuser_first_name_and_more.py  0003_membershiptype_usermembership_membershipbenefit.py  0004_alter_usermembership_cancelled_date.py  0005_alter_usermembership_discretionary_discount.py  0006_alter_membershipbenefit_benefit_details.py  0007_remove_membershipbenefit_membership_type_and_more.py  0008_membershiptype_membership_is_visible.py
data/: README.md
docs/: deployment.md  index.md
pages/: views.py
scripts/: runserver.sh
spacerunner/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
static/css/: main.css
stockkeeper/: admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
stockkeeper/migrations/: 0001_initial.py  0002_componenttype.py  0003_component_component_type.py  0004_componenttype_parent_type.py  0005_manufacturer_component_buy_at_component_rrp_and_more.py  0006_vendor_remove_component_buy_at_remove_component_rrp_and_more.py  0007_currency.py  0008_componentprice_buy_currency_and_more.py  0009_alter_currency_options_componenttype_level_and_more.py  0010_remove_componenttype_parent_type_and_more.py  0011_remove_storagearea_parent_area_storagearea_level_and_more.py  0012_rename_storage_area_name_storagearea_name.py  (+3 more)
templates/: base.html  home.html  nav_bar.html
(+6 files in other folders)
