[tool.poetry]
name = "spacerunner"
version = "0.1.0"
description = "A tool for running Maker/Hacker/Other spaces"
authors = ["Matthew Macdonald-Wallace <matt@doics.co>"]
license = "MIT-Modern-Variant"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.6"
django-prometheus = "^2.2.0"
django-bootstrap4 = "^22.1"
django-mptt = "^0.13.4"
django-jazzmin = "^2.5.0"
mkdocs = "^1.3.0"
Jinja2 = "3.1.0"
uWSGI = "^2.0.20"
uwsgi_metrics = "^1.1.5"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
